[package]
name = "blogpost_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["multipart"] }
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
rusqlite = { version = "0.29.0", features = ["bundled"] }
chrono = { version = "0.4.26", features = ["serde"] }
tower-http = { version = "0.4.0", features = ["fs"] }
reqwest = "0.11.18"
uuid = { version = "1.3.3", features = ["v4"] }
