[package]
name = "blogpost_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
chrono = { version = "0.4.26", features = ["serde"] }
tower-http = { version = "0.5.2", features = ["fs"] }
reqwest = "0.12.7"
uuid = { version = "1.3.3", features = ["v4"] }
thiserror = "1.0"
